@@ -34,10 +34,13 @@ import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.Month;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.Base64;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(SpringExtension.class)
 class PaymentGatewayClientTest {
@@ -45,7 +48,7 @@ class PaymentGatewayClientTest {
     private PaymentGatewayClient client;
 
     @Mock
-    PostePayInternalApi paymentTransactionsControllerApi;
+    PostePayInternalApi postePayInternalApi;
 
     @Mock
     XPayInternalApi xPayInternalApi;
@@ -56,10 +59,10 @@ class PaymentGatewayClientTest {
     ObjectMapper objectMapper = new ObjectMapper();
 
     @Test
-    void shouldReturnAuthorizationEmptyOptionalResponseCP_VPOS() throws JsonProcessingException {
+    void shouldNotCallAuthorizationGatewayWithInvalidDetailType() {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -84,20 +87,26 @@ class PaymentGatewayClientTest {
                 "paymentMethodName",
                 "pspBusinessName",
                 "VPOS",
-                new PostePayAuthRequestDetailsDto().detailType("VPOS").accountEmail("test@test.it")
+                new PostePayAuthRequestDetailsDto().detailType("invalid").accountEmail("test@test.it")
         );
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
-                .expectNextMatches(s -> s.getT1().isEmpty() && s.getT2().isEmpty())
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNextCount(0)
                 .verifyComplete();
+
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verifyNoInteractions(postePayInternalApi, xPayInternalApi);
     }
 
     @Test
-    void shouldReturnAuthorizationResponseCP_XPAY() throws JsonProcessingException {
+    void shouldReturnAuthorizationResponseForCreditCardWithXPay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -110,8 +119,12 @@ class PaymentGatewayClientTest {
                 null,
                 TransactionStatusDto.ACTIVATED
         );
-        CardAuthRequestDetailsDto cardDetails = new CardAuthRequestDetailsDto().cvv("345").pan("16589654852")
-                .expiryDate(LocalDate.of(2030, Month.DECEMBER, 31));
+        CardAuthRequestDetailsDto cardDetails = new CardAuthRequestDetailsDto()
+                .cvv("345")
+                .pan("16589654852")
+                .expiryDate(LocalDate.of(2030, Month.DECEMBER, 31))
+                .detailType("card")
+                .holderName("John Doe");
         AuthorizationRequestData authorizationData = new AuthorizationRequestData(
                 transaction,
                 10,
@@ -151,16 +164,23 @@ class PaymentGatewayClientTest {
                 .thenReturn(Mono.just(xPayResponse));
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
-                .assertNext(response -> response.getT2().get().equals(xPayResponse))
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNext(xPayResponse)
                 .verifyComplete();
+
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(1)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(0)).authRequest(any(), any(), any());
     }
 
     @Test
-    void shouldReturnAuthorizationResponsePPAY() throws JsonProcessingException {
+    void shouldReturnAuthorizationResponseWithPostePay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -208,20 +228,27 @@ class PaymentGatewayClientTest {
                 .urlRedirect("https://example.com");
 
         /* preconditions */
-        Mockito.when(paymentTransactionsControllerApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
+        Mockito.when(postePayInternalApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
                 .thenReturn(Mono.just(postePayResponse));
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
-                .assertNext(response -> response.getT1().get().equals(Mono.just(postePayResponse)))
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNextCount(0)
                 .verifyComplete();
+
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNext(postePayResponse)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(0)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(1)).authRequest(any(), any(), any());
     }
 
     @Test
-    void shouldThrowAlreadyProcessedOn401CP_XPAY() throws JsonProcessingException {
+    void shouldThrowAlreadyProcessedOn401ForCreditCardWithXpay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -234,7 +261,10 @@ class PaymentGatewayClientTest {
                 null,
                 TransactionStatusDto.ACTIVATED
         );
-        CardAuthRequestDetailsDto cardDetails = new CardAuthRequestDetailsDto().cvv("345").pan("16589654852")
+        CardAuthRequestDetailsDto cardDetails = new CardAuthRequestDetailsDto()
+                .detailType("card")
+                .cvv("345")
+                .pan("16589654852")
                 .expiryDate(LocalDate.of(2030, Month.DECEMBER, 31));
         AuthorizationRequestData authorizationData = new AuthorizationRequestData(
                 transaction,
@@ -282,20 +312,28 @@ class PaymentGatewayClientTest {
                 );
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
+
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
                 .expectErrorMatches(
                         error -> error instanceof AlreadyProcessedException &&
                                 ((AlreadyProcessedException) error).getRptId()
                                         .equals(transaction.getNoticeCodes().get(0).rptId())
                 )
                 .verify();
+
+        verify(xPayInternalApi, times(1)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(0)).authRequest(any(), any(), any());
     }
 
     @Test
-    void shouldThrowAlreadyProcessedOn401PPAY() throws JsonProcessingException {
+    void shouldThrowAlreadyProcessedOn401ForPostePay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -339,7 +377,7 @@ class PaymentGatewayClientTest {
         String encodedMdcFields = Base64.getEncoder().encodeToString(mdcInfo.getBytes(StandardCharsets.UTF_8));
 
         /* preconditions */
-        Mockito.when(paymentTransactionsControllerApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
+        Mockito.when(postePayInternalApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
                 .thenReturn(
                         Mono.error(
                                 new WebClientResponseException(
@@ -354,20 +392,27 @@ class PaymentGatewayClientTest {
                 );
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
                 .expectErrorMatches(
                         error -> error instanceof AlreadyProcessedException &&
                                 ((AlreadyProcessedException) error).getRptId()
                                         .equals(transaction.getNoticeCodes().get(0).rptId())
                 )
                 .verify();
+
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(0)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(1)).authRequest(any(), any(), any());
     }
 
     @Test
     void shouldThrowGatewayTimeoutOn504() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -411,7 +456,7 @@ class PaymentGatewayClientTest {
         String encodedMdcFields = Base64.getEncoder().encodeToString(mdcInfo.getBytes(StandardCharsets.UTF_8));
 
         /* preconditions */
-        Mockito.when(paymentTransactionsControllerApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
+        Mockito.when(postePayInternalApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
                 .thenReturn(
                         Mono.error(
                                 new WebClientResponseException(
@@ -426,18 +471,25 @@ class PaymentGatewayClientTest {
                 );
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
                 .expectErrorMatches(
                         error -> error instanceof GatewayTimeoutException
                 )
                 .verify();
+
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(0)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(1)).authRequest(any(), any(), any());
     }
 
     @Test
-    void shouldThrowBadGatewayOn500PPAY() throws JsonProcessingException {
+    void shouldThrowBadGatewayOn500ForPostePay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -481,7 +533,7 @@ class PaymentGatewayClientTest {
         String encodedMdcFields = Base64.getEncoder().encodeToString(mdcInfo.getBytes(StandardCharsets.UTF_8));
 
         /* preconditions */
-        Mockito.when(paymentTransactionsControllerApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
+        Mockito.when(postePayInternalApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
                 .thenReturn(
                         Mono.error(
                                 new WebClientResponseException(
@@ -496,16 +548,23 @@ class PaymentGatewayClientTest {
                 );
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
                 .expectErrorMatches(error -> error instanceof BadGatewayException)
                 .verify();
+
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(0)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(1)).authRequest(any(), any(), any());
     }
 
     @Test
-    void shouldThrowBadGatewayOn500CP_XPAY() throws JsonProcessingException {
+    void shouldThrowBadGatewayOn500ForCreditCardWithXPay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -566,16 +625,23 @@ class PaymentGatewayClientTest {
                 );
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
                 .expectErrorMatches(error -> error instanceof BadGatewayException)
                 .verify();
+
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(1)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(0)).authRequest(any(), any(), any());
     }
 
     @Test
-    void fallbackOnEmptyMdcInfoOnMapperErrorPPAY() throws JsonProcessingException {
+    void fallbackOnEmptyMdcInfoOnMapperErrorForPostePay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -625,21 +691,27 @@ class PaymentGatewayClientTest {
         Mockito.when(objectMapper.writeValueAsString(Map.of("transactionId", transactionIdUUID)))
                 .thenThrow(new JsonProcessingException("") {
                 });
-        Mockito.when(paymentTransactionsControllerApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
+        Mockito.when(postePayInternalApi.authRequest(postePayAuthRequest, false, encodedMdcFields))
                 .thenReturn(Mono.just(postePayResponse));
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
-                .assertNext(response -> response.getT1().get().equals(postePayResponse))
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNext(postePayResponse)
                 .verifyComplete();
 
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(0)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(1)).authRequest(any(), any(), any());
     }
 
     @Test
-    void fallbackOnEmptyMdcInfoOnMapperErrorCP_XPAY() throws JsonProcessingException {
+    void fallbackOnEmptyMdcInfoOnMapperErrorForCreditCardWithXPay() throws JsonProcessingException {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -695,17 +767,23 @@ class PaymentGatewayClientTest {
                 .thenReturn(Mono.just(xPayResponse));
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
-                .assertNext(response -> response.getT2().get().equals(xPayResponse))
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectNext(xPayResponse)
                 .verifyComplete();
 
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(1)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(0)).authRequest(any(), any(), any());
     }
 
     @Test
-    void shouldThrowInvalidRequestWhenCardDetailsAreMissing_XPAY() throws JsonProcessingException {
+    void shouldThrowInvalidRequestWhenCardDetailsAreMissingForCreditCardWithXPay() {
         TransactionActivated transaction = new TransactionActivated(
                 new TransactionId(transactionIdUUID),
-                Arrays.asList(
+                List.of(
                         new NoticeCode(
                                 new PaymentToken("paymentToken"),
                                 new RptId("77777777777111111111111111111"),
@@ -734,8 +812,15 @@ class PaymentGatewayClientTest {
         );
 
         /* test */
-        StepVerifier.create(client.requestGeneralAuthorization(authorizationData))
-                .expectErrorMatches(exception -> exception instanceof InvalidRequestException);
+        StepVerifier.create(client.requestXPayAuthorization(authorizationData))
+                .expectError(InvalidRequestException.class)
+                .verify();
 
+        StepVerifier.create(client.requestPostepayAuthorization(authorizationData))
+                .expectNextCount(0)
+                .verifyComplete();
+
+        verify(xPayInternalApi, times(0)).authRequestXpay(any(), any());
+        verify(postePayInternalApi, times(0)).authRequest(any(), any(), any());
     }
 }
